--- a/templates/assets/index.html
+++ b/templates/assets/index.html
@@ -8,7 +8,7 @@
   <p class="lead">Descubra a melhor seleção de carros para atender às suas necessidades de locação.</p>
   <a class="btn btn-primary btn-lg" href="#carros-disponiveis" role="button">Ver Carros Disponíveis</a>
 </div>
-
+<div class="container py-5">
 <!-- Seção de informações -->
 <section class="container py-5">
   <div class="row">
@@ -147,6 +147,7 @@
   </div>
 </section>
 {% endif %}
+</div>
 
 <style>
   body {
