--- a/templates/assets/footer.html
+++ b/templates/assets/footer.html
@@ -1,54 +1,35 @@
-<footer class="footer text-white bg-dark">
-  <div class="container py-5">
-    <div class="row">
-      <div class="col-md-6">
-        <h5 class="mb-4">Informações de Contato</h5>
-        <p>Telefone: (77) 1234-5678</p>
-        <p>Email: RentCars@gmail.com</p>
-        <p>Endereço: Rua Principal, 123 - Guanambi - Bahia</p>
-      </div>
-      <div class="col-md-6">
-        <h5 class="mb-4">Siga-nos nas Redes Sociais</h5>
-        <ul class="list-inline social-icons">
-          <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f fa-2x"></i></a></li>
-          <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-2x"></i></a></li>
-          <li class="list-inline-item"><a href="#"><i class="fab fa-instagram fa-2x"></i></a></li>
-        </ul>
-      </div>
+<footer class="bg-dark text-white py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h5 class="mb-4">Informações de Contato</h5>
+                <p><i class="fas fa-phone me-2"></i>Telefone: (77) 1234-5678</p>
+                <p><i class="fas fa-envelope me-2"></i>Email: RentCars@gmail.com</p>
+                <p><i class="fas fa-map-marker-alt me-2"></i>Endereço: Rua Principal, 123 - Guanambi - Bahia</p>
+            </div>
+            <div class="col-md-6">
+                <h5 class="mb-4">Siga-nos nas Redes Sociais</h5>
+                <ul class="list-inline social-icons">
+                    <li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href="#"><i class="fab fa-twitter fa-2x"></i></a></li>
+                    <li class="list-inline-item"><a href="#"><i class="fab fa-instagram fa-2x"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <hr class="my-4">
+        <div class="text-center">
+            <p class="mb-0">&copy; 2023 RentCars. Todos os direitos reservados.</p>
+        </div>
     </div>
-    <hr class="mt-4 mb-3">
-    <div class="text-center">
-      <p class="mb-0">&copy; 2023 RentCars. Todos os direitos reservados.</p>
-    </div>
-  </div>
 </footer>
 
 <style>
-  .footer {
-    background: #333;
-    padding-top: 40px;
-    padding-bottom: 20px;
-  }
+    .social-icons a {
+        color: white;
+        transition: color 0.3s;
+    }
 
-  .footer p {
-    font-size: 14px;
-    margin-bottom: 8px;
-  }
-
-  .footer h5 {
-    color: #fff;
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: 15px;
-  }
-
-  .social-icons a {
-    color: #fff;
-    margin-right: 10px;
-    transition: color 0.3s ease;
-  }
-
-  .social-icons a:hover {
-    color: #007bff;
-  }
+    .social-icons a:hover {
+        color: #f39c12;
+    }
 </style>
