--- a/templates/assets/carro/add_carro.html
+++ b/templates/assets/carro/add_carro.html
@@ -1,15 +1,29 @@
 {% extends 'assets/base.html' %}
 {% block content %}
 {% load bootstrap5 %}
-<div class="container py-5 mt-5">
-  <h2>Adicionar Novo Automóvel</h2>
-	<form method="post" enctype="multipart/form-data">
-		{% csrf_token %}
-		{% bootstrap_form form %}
+<div class="container py-5 mt-4">
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title text-center mb-4">Adicionar Novo Automóvel</h2>
+          <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {% bootstrap_form form %}
 
-		<button type="submit" class="btn btn-primary">Salvar</button>
-        <a href="{% url 'home' %}" class="btn btn-secondary">Cancelar</a>
-	</form>
+            <div class="d-grid gap-2 mt-4">
+              <button type="submit" class="btn btn-primary">Salvar</button>
+              <a href="{% url 'home' %}" class="btn btn-secondary">Cancelar</a>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
+	<style>
+		body{
+			background: #cddad7;
+		}
+	</style>
 {% endblock %}
