--- a/templates/assets/locacao_admins/carros.html
+++ b/templates/assets/locacao_admins/carros.html
@@ -3,6 +3,7 @@
 {% block content %}
 <section>
   <div class="container py-5">
+	  <h3 class="text-center mb-5">Escolha o veiculo e faça a Reserva.</h3>
     <div class="row">
       <div class="col-md-8 offset-md-2">
         <form class="d-flex my-4" method="GET">
@@ -46,7 +47,7 @@
 {% endif %}
 <style>
   body {
-    background: #cddad7;
+    {#background: #cddad7;#}
   }
 
   .box-shadow {
@@ -61,7 +62,7 @@
 
   {#esse é o problematico#}
   .container {
-    background: white;
+    {#background: white;#}
   }
 
   .card .card-img-top {
@@ -78,7 +79,6 @@
     border: 2px solid black;
     border-radius: 5px;
   }
-
 
   .mask {
     background-color: rgba(0, 0, 0, 0.7);
