--- a/templates/assets/index.html
+++ b/templates/assets/index.html
@@ -3,43 +3,39 @@
 {% block content %}
 
 <!-- Banner -->
-<div class="jumbotron text-center">
-  <h1 class="display-4">Alugue um Carro Agora!</h1>
-  <p class="lead">Descubra a melhor seleção de carros para atender às suas necessidades de locação.</p>
-  <a class="btn btn-primary btn-lg" href="#carros-disponiveis" role="button">Ver Carros Disponíveis</a>
+<div class="jumbotron text-center bg-primary text-white">
+  <h1 class="display-4">Bem-vindo à nossa Locadora de Veículos</h1>
+  <p class="lead">Encontre o carro perfeito para sua próxima aventura!</p>
+  <a class="btn btn-light btn-lg" href="#carros-disponiveis" role="button">Ver Carros Disponíveis</a>
 </div>
-<div class="container py-5">
+
 <!-- Seção de informações -->
-<section class="container py-5">
+<section class="container py-5" style="background: #cddad7">
   <div class="row">
-    <div class="col-md-4">
-      <h2 class="title-section">Carros de Qualidade</h2>
-      <p class="text-section">Oferecemos uma frota diversificada de veículos de qualidade para você escolher. Desde carros compactos até SUVs luxuosos, temos tudo o que você precisa para tornar sua viagem especial.</p>
+    <div class="col-md-6">
+      <h2 class="title-section" style="color: black">Carros para Todos os Estilos</h2>
+      <p class="text-section" style="color: black">Encontre o carro perfeito para sua viagem, seja um sedã confortável ou um SUV espaçoso. Temos opções para todos os gostos e necessidades.</p>
     </div>
-    <div class="col-md-4">
-      <h2 class="title-section">Reservas Fáceis</h2>
-      <p class="text-section">Nosso processo de reserva é simples e conveniente. Basta selecionar o carro de sua escolha, fornecer algumas informações básicas e pronto! Você estará pronto para pegar seu carro em pouco tempo.</p>
-    </div>
-    <div class="col-md-4">
-      <h2 class="title-section">Atendimento ao Cliente</h2>
-      <p class="text-section">Nossa equipe dedicada está pronta para ajudá-lo em todas as etapas do processo de locação. Se você tiver alguma dúvida ou precisar de assistência, não hesite em entrar em contato conosco.</p>
+    <div class="col-md-6">
+      <h2 class="title-section" style="color: black">Reservas Rápidas e Fáceis</h2>
+      <p class="text-section" style="color: black">Faça sua reserva em poucos minutos. Escolha as datas, selecione o carro e preencha seus dados. Pronto, você está pronto para pegar a estrada!</p>
     </div>
   </div>
 </section>
 
 <!-- Seção de Requisitos para Aluguel -->
 <section class="bg-light py-5">
-  <div class="container text-center">
-    <h2>Requisitos para Aluguel</h2>
-    <div class="row mt-4">
-      <div class="col-md-10 offset-md-1">
+  <div class="container text-center" style="background: #cddad7">
+    <h2 style="padding-top: 25px">Requisitos para Aluguel</h2>
+    <div class="row mt-4" style="background: #cddad7; padding: 20px">
+      <div class="col-md-10 offset-md-1" style="background: #cddad7">
         <div class="card-deck d-flex flex-wrap justify-content-center">
           <div class="card border">
             <i class="fa-solid fa-user icons"></i>
             <div class="card-body">
               <h5 class="card-title">Idade e Tempo de Carteira</h5>
               <p class="card-text">Para alugar um carro, é necessário ter no mínimo 21 anos e possuir carteira de motorista válida por pelo menos 2 anos.</p>
-            </div>
+          </div>
           </div>
           <div class="card">
             <i class="fa-solid fa-address-card icons"></i>
@@ -55,14 +51,14 @@
               <p class="card-text">Um cartão de crédito válido é exigido para efetuar o pagamento do aluguel e como garantia para a locação.</p>
             </div>
           </div>
-          <div class="card">
+          <div class="card" >
             <i class="fa-solid fa-id-card-clip icons"></i>
             <div class="card-body">
               <h5 class="card-title">CPF sem Restrição</h5>
               <p class="card-text">O cliente deve ter o CPF sem restrição nos órgãos de proteção ao crédito.</p>
             </div>
           </div>
-          <div class="card">
+          <div class="card" >
             <i class="fa-solid fa-earth-americas icons"></i>
             <div class="card-body">
               <h5 class="card-title">Clientes Estrangeiros</h5>
@@ -76,7 +72,7 @@
 </section>
 
 <section>
-  <div class="container py-5">
+  <div class="container py-5" style="background: #cddad7">
     <div class="row">
       <div class="col-md-8 offset-md-2">
         <form class="d-flex my-4" method="GET">
@@ -126,7 +122,7 @@
       {% for carro in carros %}
         {% if not carro.disponivel %}
 	        <h2 class="cars">Carros Alugados no Momento</h2>
-          <div class="col-md-4">
+          <div class="col-md-4" style="padding: 25px">
             <div class="card mb-4 box-shadow">
               {% if carro.imagem %}
                 <img class="card-img-top" src="{{ carro.imagem.url }}" alt="Imagem do automóvel">
@@ -147,7 +143,7 @@
   </div>
 </section>
 {% endif %}
-</div>
+
 
 <style>
   body {
